--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -206,6 +206,7 @@ aura = []
 default = [
     'std',
     'aura',
+    'with-rocksdb-weights',
 ]
 manual-seal = []
 runtime-benchmarks = [
@@ -215,6 +216,7 @@ runtime-benchmarks = [
     'pallet-ethereum/runtime-benchmarks',
     'pallet-evm/runtime-benchmarks',
 ]
+with-rocksdb-weights = []
 std = [
     'serde',
     'codec/std',
